# nuto

./: #CMakeLists.txt#  .clang-format  .coafile  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE.txt  PDEComments.md  README.md  README.txt  StructureFeti.cpp  analyseCode.sh
applications/benchmark/: AssembleSparseMatrix.cpp  Benchmark.h  BlockVectors.cpp  BuildGradient.cpp  CMakeLists.txt  ConstraintsBenchmark.cpp  ContainerViewBenchmark.cpp  DenseSpherePacking.cpp  DofMatrixExport.cpp  ElasticSolve.cpp  ExplicitEulerBenchmark.cpp  GoogleBenchmarkExample.cpp  LinearElasticBenchmarkStructure.h  LinearElasticDamageBenchmark.cpp  LinearElasticity.cpp  LinearElasticityExplicit.cpp  LinearElasticityOPENMP.cpp  LinearElasticityVisualize.cpp  MeshFemBenchmark.cpp  NewtonRaphsonBenchmark.cpp  ShapeFunctionMemoization.cpp  Solvers.cpp  SolversGB.cpp  VisualizeBenchmark.cpp
applications/custom/: CMakeLists.txt  MyTests.cpp
applications/examples/: CMakeLists.txt  ConcreteCompressionWithInclusion.cpp  GradientDamageCalibration.cpp  SingleInclusion.geo  SingleInclusion.msh
applications/integrationtests/: CMakeLists.txt  ConstraintsLagrange2D.cpp  ConstraintsNodeToElement.cpp  ElementUniaxialBrick3D.cpp  ElementUniaxialPrism3D.cpp  ElementUniaxialQuad2D.cpp  ElementUniaxialTest.h  ElementUniaxialTruss1D.cpp  Quad2DPatchTest.py  Shrinkage.cpp  SparseMatrixTests.cpp  SpringDamperCombination.cpp
benchmark/: AssembleSparseMatrix.cpp  Benchmark.h  BuildGradient.cpp  CMakeLists.txt  LinearElasticity.cpp
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  DoxyfilePython.in  IPythonExample.md  Temperature1D.html  footer.html  index.md  test.md  vkindractest  vkindractest2.md
doc/dev/: AvoidUnsigned.md  BoostPtrContainer.md  BuildLocalDocumentation.md  BuildWithClang.md  CodingStyle.md  ConstitutiveStaticData.md  Constraints.md  ConstraintsPde.md  Coverage.md  CustomRepoGuide.md  Doxygen.md  FETI.md  ForwardDeclarations.md  FullMatrixToEigenRemarks.md  Mpi.md  NuTo-codeStyle.md  NuToSerializeStream.md  SpacialContainer.md  SpatialContainer.md  TikzImages.md  UploadDockerImage.md  index.md
doc/images/: Brick3D.tikz  Prism3D.tikz  Quad2D.tikz  Temperature1D.tikz  Tetrahedron3D.tikz  Triangle2D.tikz  Truss1D.tikz  tetrahedron10n.fig
doc/source/: conf.py  index.rst
doc/trilinos_docu/: notes  short_docu.aux  short_docu.out  short_docu.tex  short_docu.toc
doc/user/: index.md  installation.md
examples/c++/: Brick8N.cpp  CMakeLists.txt  CSDAMesh.msh  CSDAPrism3D.cpp  ConcurrentMultiscale.cpp  ConcurrentMultiscale.geo  ConcurrentMultiscale.msh  ConcurrentMultiscaleCreateFineScale.cpp  ConcurrentMultiscaleFineScale.geo  ConcurrentMultiscaleFineScale.msh  ConstraintsLagrange1D.cpp  Coupled2DMesoTransient.cpp  CrackPlane2D4N.cpp  DecodeMortonOrder.cpp  ExplicitTimeIntegration.cpp  GeometryConcrete2D.cpp  Grid3D.cpp  Grid3DRed.cpp  HeatedPlate.cpp  HeatedPlate.geo  HeatedPlate.msh  ImportGmsh.cpp  ImportGmsh.geo  ImportGmsh.msh  InputStructureGrid3D  InsulatedPlate.cpp  MortonOrder.cpp  MultiGrid3D.cpp  NonlocalDamagePlasticity.cpp  NonlocalDamagePlasticityBeam.cpp  NonlocalDamagePlasticityModel.cpp  NonlocalDamagePlasticityModelView.py  OctreeGrid3D.cpp  OpenMP.cpp  PeriodicBoundaryConditions.cpp  PeriodicBoundaryConditions.geo  PhantomNodeMethodPlane2D4N.cpp  Plane2D4NFreeHangingNode.cpp  SparseDirectSolverMKLPardiso.cpp  SparseDirectSolverMUMPS.cpp  (+14 more)
myNutoExamples/: .directory  Brick8N.cpp  CMakeLists.txt
nuto/: CMakeLists.txt
nuto/base/: CMakeLists.txt  Debug.h  Exception.h  Group.h  Logger.cpp  Logger.h  Timer.cpp  ValueVector.h  Version.cpp  Version.h
nuto/geometryConcrete/: CMakeLists.txt  GeometryConcrete.cpp  GmshWriter.cpp  InputReader.cpp  Specimen.cpp
nuto/math/: CMakeLists.txt  CubicSplineInterpolation.cpp  CubicSplineInterpolation.h  DelaunayVoronoi.h  EigenCompanion.h  EigenIO.cpp  EigenIO.h  EigenOdeintCompatibility.h  EigenSparseSolve.cpp  EigenSparseSolve.h  Equation.h  Interpolation.cpp  Interpolation.h  Legendre.cpp  LineSearch.h  LinearInterpolation.cpp  LinearInterpolation.h  NaturalCoordinateMemoizer.h  NewtonRaphson.h  PolynomialLeastSquaresFitting.cpp  PolynomialLeastSquaresFitting.h  Quadrature.cpp  SupportPoints.h  dlapack.h
nuto/mechanics/: CMakeLists.txt  DirectionEnum.h
nuto/physics/: PhysicalConstantsSI.h  PhysicalEquationsSI.h
nuto/visualize/: AverageGeometries.h  AverageHandler.cpp  AverageHandler.h  CMakeLists.txt  Cell.cpp  Cell.h  DataArray.cpp  DataArray.h  HandlerInterface.h  Point.cpp  PointHandler.cpp  PointHandler.h  PostProcess.cpp  PostProcess.h  UnstructuredGrid.cpp  UnstructuredGrid.h  Visualizer.cpp  Visualizer.h  VoronoiGeometries.cpp  VoronoiGeometries.h  VoronoiHandler.cpp  VoronoiHandler.h  XMLWriter.cpp  XMLWriter.h
python/nuto/: CMakeLists.txt  __init__.py  enum_hack.py
src/: CMakeLists.txt  StructureGrid3D.cpp
src/base/: CMakeLists.txt  CallbackInterface.cpp  CallbackInterface.h  ContainerView.h  EntryGenerator.h  Exception.h  Group.h  Logger.cpp  Logger.h  MakeArray.h  NuToObject.h  Timer.cpp  Timer.h  UniqueId.h  ValueVector.h  Version.cpp  Version.h
src/geometryConcrete/: CMakeLists.txt  GeometryConcrete.cpp  GeometryConcrete.h  GmshWriter.cpp  GmshWriter.h  InputReader.cpp  InputReader.h  Specimen.cpp  Specimen.h  WallTime.cpp  WallTime.h
src/gui/: CMakeLists.txt  nutogui.kdev4
src/math/: Average.h  CMakeLists.txt  CubicSplineInterpolation.cpp  CubicSplineInterpolation.h  CustomBoostSerializationExtensions.h  DelaunayVoronoi.h  EigenCompanion.cpp  EigenCompanion.h  EigenIO.cpp  EigenIO.h  EigenSolverArpack.cpp  EigenSolverArpack.h  EigenSolverArpackEnum.h  EigenSparseSolve.cpp  EigenSparseSolve.h  FullMatrix.cpp  FullMatrix.h  FullMatrix_Def.h  FullVector.h  FullVector_Def.h  Gmres.h  Interpolation.cpp  Interpolation.h  Legendre.cpp  Legendre.h  LineSearch.h  LinearInterpolation.cpp  LinearInterpolation.h  MathException.h  Matrix.cpp  Matrix.h  MatrixBaseAddons.h  MatrixOperations.cpp  MortonOrder.h  NaturalCoordinateMemoizer.h  NewtonRaphson.h  NuToMath.cpp  Operator.h  Polynomial.cpp  (+38 more)
test/: CMakeLists.txt
(+3472 files in other folders)
