
# Operators
ADD_EXECUTABLE(DamageViscoPlasticity DamageViscoPlasticity.cpp)
# ADD_EXECUTABLE(InverseMatrix InverseMatrix.cpp)
# ADD_EXECUTABLE(SimulTool SimulTool.cpp)
ADD_EXECUTABLE(Brick8N Brick8N.cpp)
TARGET_LINK_LIBRARIES(DamageViscoPlasticity NuToMath NuToMechanics NuToBase ${Boost_LIBRARIES} ${LAPACK_LIBRARIES})
# TARGET_LINK_LIBRARIES(InverseMatrix NuToMath NuToMechanics NuToBase ${Boost_LIBRARIES} ${LAPACK_LIBRARIES})
# TARGET_LINK_LIBRARIES(SimulTool NuToMath NuToMechanics NuToBase ${Boost_LIBRARIES} ${LAPACK_LIBRARIES})
TARGET_LINK_LIBRARIES(Brick8N NuToMechanics NuToMath NuToBase ${Boost_LIBRARIES} ${LAPACK_LIBRARIES} ${ANN_LIBRARIES})
IF(MUMPS_FOUND)
  TARGET_LINK_LIBRARIES(DamageViscoPlasticity ${MUMPS_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
#  TARGET_LINK_LIBRARIES(InverseMatrix ${MUMPS_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
#  TARGET_LINK_LIBRARIES(SimulTool ${MUMPS_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
  TARGET_LINK_LIBRARIES(Brick8N ${MUMPS_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
ENDIF(MUMPS_FOUND)
IF (ENABLE_VISUALIZE)
  TARGET_LINK_LIBRARIES(Brick8N NuToVisualize)
ENDIF (ENABLE_VISUALIZE)
IF(MINGW)
  SET_TARGET_PROPERTIES(DamageViscoPlasticity PROPERTIES LINK_FLAGS -Wl,--enable-auto-import)
#  SET_TARGET_PROPERTIES(InverseMatrix PROPERTIES LINK_FLAGS -Wl,--enable-auto-import)
#  SET_TARGET_PROPERTIES(SimulTool PROPERTIES LINK_FLAGS -Wl,--enable-auto-import)
  SET_TARGET_PROPERTIES(Brick8N PROPERTIES LINK_FLAGS -Wl,--enable-auto-import)
ENDIF(MINGW)