# $Id$
IF (ENABLE_OPENMP AND OPENMP_FOUND)
  ADD_EXECUTABLE(OpenMP OpenMP.cpp)
ENDIF (ENABLE_OPENMP AND OPENMP_FOUND)

IF(ENABLE_MKL AND MKLSolver_FOUND)
  ADD_EXECUTABLE(SparseDirectSolverMKLPardiso SparseDirectSolverMKLPardiso.cpp)
  TARGET_LINK_LIBRARIES(SparseDirectSolverMKLPardiso NuToMath NuToBase ${Boost_LIBRARIES} ${MKLSolver_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
ENDIF(ENABLE_MKL AND MKLSolver_FOUND)

IF(ENABLE_MUMPS AND MUMPS_FOUND)
  ADD_EXECUTABLE(SparseDirectSolverMUMPS SparseDirectSolverMUMPS.cpp)
  TARGET_LINK_LIBRARIES(SparseDirectSolverMUMPS NuToMath NuToBase ${Boost_LIBRARIES} ${MUMPS_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
ENDIF(ENABLE_MUMPS AND MUMPS_FOUND)

IF(ENABLE_VISUALIZE)
  ADD_EXECUTABLE(VisualizeTruss1D2N VisualizeTruss1D2N.cpp)
  TARGET_LINK_LIBRARIES(VisualizeTruss1D2N NuToMechanics NuToVisualize NuToMath NuToBase ${Boost_LIBRARIES} ${ANN_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
ENDIF(ENABLE_VISUALIZE)

# Brick8N
ADD_EXECUTABLE(Brick8N Brick8N.cpp)
TARGET_LINK_LIBRARIES(Brick8N NuToMechanics NuToMath NuToBase ${Boost_LIBRARIES} ${ANN_LIBRARIES})
IF (ENABLE_VISUALIZE)
  TARGET_LINK_LIBRARIES(Brick8N NuToVisualize)
ENDIF (ENABLE_VISUALIZE)
IF(MUMPS_FOUND)
  TARGET_LINK_LIBRARIES(Brick8N ${MUMPS_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
ENDIF(MUMPS_FOUND)

# NonlocalDamagePlasticity
ADD_EXECUTABLE(NonlocalDamagePlasticity NonlocalDamagePlasticity.cpp)
TARGET_LINK_LIBRARIES(NonlocalDamagePlasticity NuToMechanics NuToMath NuToBase ${Boost_LIBRARIES} ${ANN_LIBRARIES})
IF (ENABLE_VISUALIZE)
  TARGET_LINK_LIBRARIES(NonlocalDamagePlasticity NuToVisualize)
ENDIF (ENABLE_VISUALIZE)
IF(MUMPS_FOUND)
  TARGET_LINK_LIBRARIES(NonlocalDamagePlasticity ${MUMPS_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
ENDIF(MUMPS_FOUND)

# Operators
ADD_EXECUTABLE(TestOperators TestOperators.cpp)
TARGET_LINK_LIBRARIES(TestOperators NuToMath NuToBase ${Boost_LIBRARIES})
IF(MUMPS_FOUND)
  TARGET_LINK_LIBRARIES(TestOperators ${MUMPS_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
ENDIF(MUMPS_FOUND)

# Plane2D4N
ADD_EXECUTABLE(VisualizePlane2D4N VisualizePlane2D4N.cpp)
TARGET_LINK_LIBRARIES(VisualizePlane2D4N NuToMechanics NuToMath NuToBase ${Boost_LIBRARIES} ${ANN_LIBRARIES})
IF (ENABLE_VISUALIZE)
  TARGET_LINK_LIBRARIES(VisualizePlane2D4N NuToVisualize)
ENDIF (ENABLE_VISUALIZE)
IF(MUMPS_FOUND)
  TARGET_LINK_LIBRARIES(VisualizePlane2D4N ${MUMPS_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
ENDIF(MUMPS_FOUND)

# Tetrahedron 10N
ADD_EXECUTABLE(Tetrahedron10N Tetrahedron10N.cpp)
TARGET_LINK_LIBRARIES(Tetrahedron10N NuToMechanics NuToMath NuToBase ${Boost_LIBRARIES} ${ANN_LIBRARIES})
IF (ENABLE_VISUALIZE)
  TARGET_LINK_LIBRARIES(Tetrahedron10N NuToVisualize)
ENDIF (ENABLE_VISUALIZE)
IF(MUMPS_FOUND)
  TARGET_LINK_LIBRARIES(Tetrahedron10N ${MUMPS_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
ENDIF(MUMPS_FOUND)

# Truss1D2N
ADD_EXECUTABLE(Truss1D2N Truss1D2N.cpp)
TARGET_LINK_LIBRARIES(Truss1D2N NuToMechanics NuToMath NuToBase ${Boost_LIBRARIES} ${ANN_LIBRARIES})
IF (ENABLE_VISUALIZE)
  TARGET_LINK_LIBRARIES(Truss1D2N NuToVisualize)
ENDIF (ENABLE_VISUALIZE)
IF(MUMPS_FOUND)
  TARGET_LINK_LIBRARIES(Truss1D2N ${MUMPS_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
ENDIF(MUMPS_FOUND)

# StrucutreGrid3D
ADD_EXECUTABLE(StructureGrid3D StructureGrid3D.cpp)
TARGET_LINK_LIBRARIES(StructureGrid3D NuToMechanics NuToMath NuToBase ${Boost_LIBRARIES} ${ANN_LIBRARIES})
IF (ENABLE_VISUALIZE)
  TARGET_LINK_LIBRARIES(StructureGrid3D NuToVisualize)
ENDIF (ENABLE_VISUALIZE)
IF(MUMPS_FOUND)
  TARGET_LINK_LIBRARIES(StructureGrid3D ${MUMPS_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
ENDIF(MUMPS_FOUND)
